Updated site description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" description="Melanie's personal site showing her journey through tech.">
+    <meta charset="UTF-8" description="Melanie's curriculum vitae.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/index.js"></script>
