--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table border="0" cellspacing="5px">
       <tr>
-        <td>  <img src="melanie.png" alt="melanie smiling" height="250px"width="250px"/></td>
+        <td>  <img src="melaniee.png" alt="melanie smiling" height="250px"width="250px"/></td>
         <td> <h1>Melanie Eureka Ngome</h1>
 	  <p><em>Student at Rivers State University Of Science and Technology</em></p>
 	  <p>A frontend web developer aspirant, currently learning frontend web development on Udemy.</p></td>
