--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 height=device-height">
     <title>Contact me</title>
     
   </head>
@@ -15,7 +15,7 @@
       <hr size="3" noshade />
     <form action="mailto:melanieeengome@gmail.com" method="post" enctype="text/plain">
       <label for="fullname">Name:</label>
-      <input type="text" name="yourName" id="" value="fullname" /> <br />
+      <input type="text" name="yourName" id="" value="" /> <br />
       <label for="mail">Email</label>
       <input type="email" name="yourEmail" id="mail" value="" placeholder="example@gmail.com"/><br />
       <label for="Message">Send me a Message:</label>
