--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,24 @@
       <a href="https://twitter.com/lanietodev">Twitter</a>
     </p>
       <hr size="3" noshade />
-    <form action="mailto:melanieeengome@gmail.com" method="post" enctype="text/plain">
-      <label for="fullname">Name:</label>
-      <input type="text" name="yourName" id="" value="" /> <br />
-      <label for="mail">Email</label>
-      <input type="email" name="yourEmail" id="mail" value="" placeholder="example@gmail.com"/><br />
-      <label for="Message">Send me a Message:</label>
- <br />
-      <textarea name="yourMessage" id= rows="8" cols="20"></textarea>
-      <br />
-      <input type="submit" name="" id="" value="Submit"/>
+        <form action="mailto:melanieeengome@gmail.com" method="post" enctype="text/plain">
+      <table border="0">
+        <tr>
+          <td>  <label for="fullname">Name:</label></td>
+          <td>  <input type="text" name="yourName" id="" value="" /> </td>
+        </tr>
+        <tr>
+          <td>  <label for="mail">Email</label></td>
+          <td> <input type="email" name="yourEmail" id="mail" value="" placeholder="example@gmail.com"/></td>
+        </tr>
+        <tr>
+          <td> <label for="Message">Send me a Message:</label></td>
+          <td>  <textarea name="yourMessage" id= rows="8" cols="20"></textarea></td>
+        </tr>
+        <tr>
+          <td> <input type="submit" name="" id="" value="Submit"/></td>
+        </tr>
+      </table>
     </form>
   
   </body>
