--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <td>  <input type="text" name="yourName" id="" value="" /> </td>
         </tr>
         <tr>
-          <td>  <label for="mail">Email</label></td>
+          <td>  <label for="mail">Email:</label></td>
           <td> <input type="email" name="yourEmail" id="mail" value="" placeholder="example@gmail.com"/></td>
         </tr>
         <tr>
